# haskell-bencode

./: bencode.cabal
src/Data/: Bencode.hs
src/Data/Bencode/: Decoder.hs  Encoder.hs  Format.hs  Parser.hs
test/: tests.hs
test/Data/Bencode/: Test.hs
