name:                bencode
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Daniel Schierbeck
maintainer:          daniel.schierbeck@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Bencode
  build-depends:       base ==4.6.*
