name:                bencode
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Daniel Schierbeck
maintainer:          daniel.schierbeck@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable bdecode
  hs-source-dirs:      src
  main-is:             Data/Bencode/Decoder.hs
  build-depends:       base ==4.6.*, parsec ==3.1.*
