name:                bencode
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Daniel Schierbeck
maintainer:          daniel.schierbeck@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable bdecode
  hs-source-dirs:      src
  main-is:             Data/Bencode/Decoder.hs
  build-depends:       base >= 4, parsec ==3.1.*

test-suite Tests
  hs-source-dirs: src test
  main-is: tests.hs
  Type: exitcode-stdio-1.0
  build-depends:       base >= 4, Cabal >= 1.16.0
                       , parsec ==3.1.*
                       , QuickCheck
                       , HUnit
                       , test-framework
                       , test-framework-quickcheck2
                       , test-framework-hunit
